Ulogicznienie logowania, profilu i zmianyHasła - dodanie listenerów do przycisków wywołujących przygotowane wcześniej metody na serwisach. Dodanie metadata do manifestu umożliwiających działanie mapy.

--- a/android-client/android-client/src/main/res/values/strings.xml
+++ b/android-client/android-client/src/main/res/values/strings.xml
@@ -21,15 +21,14 @@
     <string name="Haslo">Hasło</string>
     <string name="Zapamietac_Dane">Zapamiętaj dane</string>
     <string name="Zatwierdz">OK</string>
+    <string name="Rejestruj">Załóż</string>
     <string name="Nazwa_Aplikacji">GeoCaching</string>
 
     <!-- Profil użytkownika -->
     <string name="nick">Nick</string>
-    <string name="nickText">#nazwaGracza#</string>
+    <string name="email">Email</string>
     <string name="zdobPkt">Zdobyte Punkty</string>
-    <string name="zdobPktText">#Punkty#</string>
     <string name="pozRank">Pozycja w rankingu</string>
-    <string name="pozRankText">#Pozycja#</string>
     <string name="passReset">Reset Hasła</string>
 
     <!-- Dodawanie nowego wyzwania -->
