Właśnie zatrybił mi GPS i ładnie scentrował mapkę na moim domu. Poimplementowałem też trochę funkcji do naprowadzania użytkownika na hinty, lecz tutaj mi brakuje już trochę elementów gui.

--- a/android-client/android-client/src/main/res/values/strings.xml
+++ b/android-client/android-client/src/main/res/values/strings.xml
@@ -70,6 +70,6 @@
     <string name="ZH_Edytuj">Zmień Hasło</string>
     <string name="title_activity_informacje_o_wskazowce">informacje_o_wskazowce</string>
 
-
+    <string name="mapy_activity_akcje">Akcje</string>
 
 </resources>
