Koordynaty za pomocą mapy
Same layouty z przejściami, bez żadnej akcji

--- a/android-client/android-client/src/main/res/values/strings.xml
+++ b/android-client/android-client/src/main/res/values/strings.xml
@@ -74,5 +74,6 @@
     <string name="podaj_email">podaj email</string>
     <string name="wróć">wróć</string>
     <string name="title_activity_lista__wskazowek">Lista_Wskazowek</string>
+    <string name="title_activity_koordynaty_mapa">Koordynaty z mapy</string>
 
 </resources>
